--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gurkadam Singh Grewal</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dhillon Quest</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Gurkadam S Grewal</h1>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <div class="container nav-container">
+      <div class="logo">Dhillon Quest</div>
+      <ul class="nav-links">
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="hero" class="hero">
+    <h1>Welcome to Dhillon Quest</h1>
+    <p>We provide innovative solutions to help your business grow and succeed.</p>
+    <a href="#about" class="btn">Learn More</a>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="about">
+    <h2>About Us</h2>
+    <p>Dhillon Quest is dedicated to delivering high-quality services and solutions that make a real impact. With years of expertise, we pride ourselves on excellence, innovation, and customer satisfaction.</p>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="services">
+    <h2>Our Services</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Consulting</h3>
+        <p>We tailor our consulting to meet your needs and drive success.</p>
+      </div>
+      <div class="card">
+        <h3>Product Development</h3>
+        <p>From idea to launch, we help build innovative products.</p>
+      </div>
+      <div class="card">
+        <h3>Support & Maintenance</h3>
+        <p>Our team ensures your systems run smoothly with reliable support.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <h2>Get in Touch</h2>
+    <p>Ready to work with us? Reach out through any of the methods below.</p>
+    <div class="grid">
+      <div class="card">
+        <p class="label">Email</p>
+        <p>contact@dhillonquest.com</p>
+      </div>
+      <div class="card">
+        <p class="label">Phone</p>
+        <p>+1 (555) 123-4567</p>
+      </div>
+      <div class="card">
+        <p class="label">Website</p>
+        <p>www.dhillonquest.com</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; <script>document.write(new Date().getFullYear())</script> Dhillon Quest. All rights reserved.</p>
+  </footer>
 </body>
 </html>
